k8s/overlays/shokohsc/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: flame-dev
  labels:
    namespace: flame-dev
    goldilocks.fairwinds.com/enabled: "true"
